빌드에러 해결. RenderInfo 얻어오기.

--- a/DUOLCommon/DUOLCommon.vcxproj
+++ b/DUOLCommon/DUOLCommon.vcxproj
@@ -41,6 +41,7 @@
     <ClInclude Include="include\DUOLCommon\Util\UUID.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLCommon\Log\LogHelper.cpp" />
     <ClCompile Include="src\DUOLCommon\Util\SpookyV2.cpp" />
     <ClCompile Include="src\DUOLCommon\Util\Hash.cpp" />
     <ClCompile Include="src\DUOLCommon\ImGui\imgui.cpp" />
@@ -51,7 +52,6 @@
     <ClCompile Include="src\DUOLCommon\ImGui\imgui_impl_win32.cpp" />
     <ClCompile Include="src\DUOLCommon\ImGui\imgui_tables.cpp" />
     <ClCompile Include="src\DUOLCommon\ImGui\imgui_widgets.cpp" />
-    <ClCompile Include="src\DUOLCommon\LogHelper.cpp" />
     <ClCompile Include="src\DUOLCommon\Util\UUID.cpp" />
   </ItemGroup>
   <ItemGroup>
