파티클 ComputeShader 연산 및 리소스 매니저 구조 변경.
파티클 ComputeShader 연산 및 리소스 매니저 구조 변경.
어째서 속도는 더 느려진건가..

--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
@@ -269,8 +269,10 @@
     <ClInclude Include="include\Core\Resource\Resource\PixelShader.h" />
     <ClInclude Include="include\Core\Resource\Resource\VertexShader.h" />
     <ClInclude Include="include\Core\Resource\Resource\Texture.h" />
+    <ClInclude Include="include\Core\Resource\Resource\ShaderClassInstance.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Core\Resource\Resource\ShaderClassInstance.cpp" />
     <ClCompile Include="src\Core\Pass\3DObject\SkyBoxPass.cpp" />
     <ClCompile Include="src\Core\Pass\BlurPass.cpp" />
     <ClCompile Include="src\Core\Pass\OutLinePass.cpp" />
