--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj.filters
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj.filters
@@ -161,6 +161,9 @@
     <ClInclude Include="include\Core\Resource\Resource\Texture.h">
       <Filter>Header</Filter>
     </ClInclude>
+    <ClInclude Include="include\Core\Resource\Resource\ShaderClassInstance.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Pass\Paritcle\BasicParticlePass.cpp">
@@ -278,6 +281,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="src\Core\Resource\Resource\Texture.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Core\Resource\Resource\ShaderClassInstance.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
