--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
@@ -270,8 +270,10 @@
     <ClInclude Include="include\Core\Resource\Resource\VertexShader.h" />
     <ClInclude Include="include\Core\Resource\Resource\Texture.h" />
     <ClInclude Include="include\Core\Resource\Resource\ShaderClassInstance.h" />
+    <ClInclude Include="include\Core\Pass\OITBlendPass.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Core\Pass\OITBlendPass.cpp" />
     <ClCompile Include="src\Core\Resource\Resource\ShaderClassInstance.cpp" />
     <ClCompile Include="src\Core\Pass\3DObject\SkyBoxPass.cpp" />
     <ClCompile Include="src\Core\Pass\BlurPass.cpp" />
