--- a/DUOLEditor/DUOLEditor.vcxproj
+++ b/DUOLEditor/DUOLEditor.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="include\DUOLEditor\TestScripts\ModelShooter.h" />
     <ClInclude Include="include\DUOLEditor\TestScripts\MoveController.h" />
     <ClInclude Include="include\DUOLEditor\TestScripts\PhysicsEventTest.h" />
+    <ClInclude Include="include\DUOLEditor\UI\Gizmo\ImGuizmo.h" />
     <ClInclude Include="include\DUOLEditor\Util\EditorSettings.h" />
     <ClInclude Include="include\DUOLEditor\Util\Font.h" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Drags\DragScalar.h" />
@@ -101,6 +102,7 @@
     <ClInclude Include="include\DUOLEditor\Modules\ViewBase.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLEditor\UI\Gizmo\ImGuizmo.cpp" />
     <ClCompile Include="src\DUOLEditor\UI\Widgets\Layout\SameLine.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\Inspector.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\ControllableViewBase.cpp" />
