--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj.filters
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\ColorGradientBar.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DebugBox.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\GameProcess.h">
@@ -111,6 +114,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="include\ColorGradientBar.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugBox.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
