Level Editor 툴 바 제작 중
 - 재생, 일시정지, 정지 기능을 담고 있습니다.
 - 재생과 정지 간 현재 씬 자동 저장 및 같은 이름이 불러 오도록 구현 중입니다. (이벤트 바인딩 관련해서 에러 있음)
 - Rendering 구조 변경에 따른 각 파이프라인을 모아 진행하는 Execute 재정의 필요합니다.

--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
@@ -251,6 +251,7 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\RectTransform.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Text.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\UnityMigrator\UnityMigrator.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Image.cpp" />
@@ -324,6 +325,7 @@
     <ClCompile Include="src\DUOLGameEngine\Util\UUID.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Text.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\UnityMigrator\UnityMigrator.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\Texture.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
