--- a/DUOLEditor/DUOLEditor.vcxproj
+++ b/DUOLEditor/DUOLEditor.vcxproj
@@ -97,11 +97,13 @@
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Selections\ListBox.h" />
     <ClInclude Include="include\DUOLEditor\TestScripts\PlayerController.h" />
     <ClInclude Include="include\DUOLEditor\TestScripts\PlayerCameraController.h" />
+    <ClInclude Include="include\DUOLEditor\Util\RawTextures.h" />
     <ClInclude Include="src\DUOLEditor\UI\Widgets\Plots\PlotHistogram.cpp" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Menu\MenuList.h" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Layout\TreeNode.h" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Layout\Container.h" />
     <ClInclude Include="include\DUOLEditor\Modules\ViewBase.h" />
+    <ClInclude Include="include\DUOLEditor\Modules\Toolbar.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLEditor\TestScripts\PlayerCameraController.cpp" />
@@ -186,6 +188,7 @@
     <ClCompile Include="src\DUOLEditor\UI\Widgets\Layout\TreeNode.cpp" />
     <ClCompile Include="src\DUOLEditor\UI\Widgets\Layout\Container.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\ViewBase.cpp" />
+    <ClCompile Include="src\DUOLEditor\Modules\Toolbar.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
